--- a/index.html
+++ b/index.html
@@ -8,14 +8,14 @@
 		<div class="main-block">
 
 			<div class="top-block">
-				<img src="./images/Google_icon.png" width="20px" height="20px" float: left;>
+				<img src="Google_icon.png" width="20px" height="20px" float: left;>
 				Увійдіть у Stack Exchange через Google
-				<img src="./images/Quit_icon.png" width="20px" height="20px" float: right;>
+				<img src="Quit_icon.png" width="20px" height="20px" float: right;>
 			</div>
 
 			<div class="information-block">
 				<div class="profile">
-					<span class="image"><img src="./images/unnamed.gif" width="30px" height="30px"></span>
+					<span class="image"><img src="unnamed.gif" width="30px" height="30px"></span>
 	                <span class="account">
 	                    <div class="name">Ярослав Плаксій</div>
 	                    <div class="email">yaroslav.plaksii@gmail.com</div>
